2011-04-15  Per Bothner  <per@bothner.com>

	* standard/SchemeCompilation.java (checkDefaultBinding): Note that
	function parameter's value is unknown.

	* standard/object.java (rewriteClassDef): Don't call declareParts
	here, instead do it later in PushApply.  The problem is that
	declareParts allocates fields and methods eagerly and prematurely
	sets the type based on the Declaration's types.  Ideally, setting
	the field type should be done in InlineCalls, when we do type
	inferencing.  But at least waiting until PushApply avoids the
	problem of try to infer the type based on the value setters, which
	may not all have been seen yet during the rewrite phase.

2011-04-15  Charles Turner <chturne@gmail.com>

	* ReplPane.java (enter): Moved method ...
	* ReplDocument.java (enter): .. to here.

2011-04-10  Per Bothner  <per@bothner.com>

	* standard/IfFeature.java (hasFeature): Add support for
	class-exists:CLASS_NAME as a feature "name".

2011-04-03  Per Bothner  <per@bothner.com>

	* standard/SchemeCompilation.java (isApplyFunction): New method.

	* lang/Translator.java (makeApply): Make return type more precise.
	* standard/SchemeCompilation.java (makeApply): Likewise.

	* standard/syntax_case.java: Use more-precise noteValueFromLet.

	* standard/define.java (rewriteForm): Use rewrite_car, so we
	can pass though line number information.

2011-03-23  Per Bothner  <per@bothner.com>

	* standard/let.java (rewrite): Use letStart/letVariable
	etc methods instead of creating LetExp directly.
	* lang/Translator.java: Use new LetExp#setBody method.
	* fluid_let.java: Likewise.
	* standard/syntax_case.java: Likewise.

2011-03-18  Per Bothner  <per@bothner.com>

	* repl.java (processArgs): New --diagnostic-strip-directories option.

2011-03-16  Per Bothner  <per@bothner.com>

	* standard/fluid_let.java (warnIfUndefined): New field.
	(rewrite): Set IS_DYNAMIC unless warnIfUndefined.

	* standard/IfFeature.java (isProvide): New convenience method.